--- a/tps_game/tps_game.csproj
+++ b/tps_game/tps_game.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="shtef21_sqlite.db" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="WS\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\js\" />
